--- a/evaluaciondocentes/src/css/Login.css
+++ b/evaluaciondocentes/src/css/Login.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.containerPrincipal{
+/*.containerPrincipal{
     position: absolute;
         left: 50%;
         top: 50%;
@@ -13,4 +13,4 @@
     }
 .containersecundario{
         text-align: center;
-    }
+    }*/
